# aktina

./: .gitignore  CMakeLists.txt  LICENSE
aktina/: canvas.hpp  canvas.test.cpp  color.test.cpp  float-compare.hpp  float-compare.test.cpp  vector.hpp  vector.test.cpp
prototype/geometry/: color.hpp  vector  vector.cpp  vector.hpp  vector.test.cpp
